@@ -1,0 +1,3 @@
+<% if has_one.data %>
+  <%= link_to has_one.data, [Administrate::NAMESPACE, has_one.data] %>
+<% end %>
